# tap-udemy-for-business

./: README.md  meltano.yml  pyproject.toml  tap-udemy-for-business.sh  tox.ini
tap_udemy_for_business/: auth.py  client.py  streams.py  tap.py
tap_udemy_for_business/schemas/: __init__.py  courses.py  user_activity.py  user_course_activity.py  user_progress.py
tap_udemy_for_business/tests/: test_core.py
tests/: __init__.py  test_core.py
