[tool.poetry]
name = "tap-udemy-for-business"
version = "0.1.0"
description = "`tap-udemy-for-business` is Singer tap for Udemy For Business, built with the Singer SDK."
authors = ["Stephen Bailey"]
license = "MIT"

[tool.poetry.dependencies]
python = "<3.10,>=3.6.2"
requests = "^2.25.1"
singer-sdk = ">=0.3.13"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-udemy-for-business = 'tap_udemy_for_business.tap:TapUdemyForBusiness.cli'
